# flux-pmix

./: .mergify.yml  Makefile.am  NEWS.md  README.md  codecov.yml  configure.ac
.github/workflows/: main.yml
config/: ax_flux_core.m4
debian/: control  copyright  rules
scripts/: debbuild.sh
src/common/libccan/: Makefile.am
src/common/libutil/: Makefile.am  unsetenv_glob.c  unsetenv_glob.h
src/common/libutil/test/: unsetenv_glob.c
src/shell/lua.d/: Makefile.am  openmpi@5.lua
src/shell/plugins/: Makefile.am  abort.c  abort.h  codec.c  codec.h  dmodex.c  dmodex.h  exchange.c  exchange.h  fence.c  fence.h  infovec.c  infovec.h  interthread.c  interthread.h  main.c  maps.c  maps.h  notify.c  notify.h
src/shell/plugins/test/: codec.c  infovec.c
src/test/: checks_run.sh
src/test/docker/: docker-run-checks.sh
src/test/docker/bionic/: Dockerfile
src/test/docker/centos7/: Dockerfile
src/test/docker/centos8/: Dockerfile
src/test/docker/el7/: Dockerfile
src/test/docker/el8/: Dockerfile
src/test/docker/el9/: Dockerfile
src/test/docker/fedora34/: Dockerfile
src/test/docker/fedora40/: Dockerfile
src/test/docker/focal/: Dockerfile
src/test/docker/jammy/: Dockerfile
src/upmi/: Makefile.am  pmix.c
t/: Makefile.am  t0001-ompi-sanity.t  t0002-basic.t  t0003-barrier.t  t0003-bizcard.t  t0004-bizcard.t  t0005-abort.t  t0006-notify.t  t0007-dmodex.t  t0008-upmi.t  t1000-ompi-basic.t  t1001-osu-benchmarks.t  t2001-osu-benchmarks.t  t2002-mpibench.t
t/etc/: rc.lua.in
t/osu-micro-benchmarks/: Makefile.am
t/sharness.d/: 00-setup.sh.in
t/src/: Makefile.am  abort.c  barrier.c  bizcard.c  getkey.c  log.h  mpi_hello.c  mpi_pingpong.c  mpi_version.c  notify.c  version.c
